--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express-session": "^1.17.5",
     "@types/morgan": "^1.9.3",
     "@types/passport": "^1.0.11",
+    "@types/passport-kakao": "^1.0.0",
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
