--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/lodash": "^4.14.191",
     "@types/morgan": "^1.9.3",
     "@types/passport": "^1.0.11",
     "@types/passport-kakao": "^1.0.0",
@@ -35,6 +36,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
