--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.19",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -46,6 +48,7 @@
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "pm2": "^5.2.2",
+    "redis": "^4.5.1",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.1"
   },
