--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "tsc",
-    "start:production": "yarn build && NODE_ENV=production PORT=80 pm2 start dist/index.js -i -0"
+    "start:production": "NODE_ENV=production PORT=80 pm2 start dist/index.js -i -0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
